--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,8 @@ dependencies {
     testImplementation 'junit:junit:4.13-beta-2'
     androidTestImplementation 'androidx.test:runner:1.2.0-alpha04'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0-alpha04'
-    implementation project(path: ':lazypageradapter')
     implementation 'com.google.android.material:material:1.1.0-alpha05'
+
+//    implementation project(path: ':lazypageradapter')
+    implementation 'com.github.MycroftWong:LazyPagerAdapter:v1.0'
 }
